2009-06-13  Paul Smith  <psmith@gnu.org>

	* scripts/variables/MAKEFILES: Verify that MAKEFILES included
	files (and files included by them) don't set the default goal.
	Savannah bug #13401.

	* scripts/functions/wildcard: Test that wildcards with
	non-existent glob matchers return empty.

2009-06-09  Paul Smith  <psmith@gnu.org>

	* scripts/options/dash-B: Test the $? works correctly with -B.
	Savannah bug #17825.

	* scripts/features/patternrules: Test that dependencies of
	"also_make" targets are created properly.  Savannah bug #19108.

	* test_driver.pl (compare_output): Create a "run" file for failed
	tests containing the command that was run.
	(get_runfile): New function.

	* run_make_tests.pl (valid_option): Enhanced support for valgrind:
	allow memcheck and massif tools.

	* scripts/features/patternrules: Have to comment out a line in the
	first test due to backing out a change that broke the implicit
	rule search algorithm.  Savannah bug #17752.
	* scripts/misc/general4: Remove a test that is redundant with
	patternrules.

	* scripts/features/parallelism: Add a test for re-exec with
	jobserver master override.  Savannah bug #18124.

2009-06-08  Paul Smith  <psmith@gnu.org>

	* scripts/features/targetvars: Add a test for continued target
	vars after a semicolon.  Savannah bug #17521.

2009-06-07  Paul Smith  <psmith@gnu.org>

	* scripts/features/se_explicit: Make sure we catch defining
	prereqs during snap_deps().  Savannah bug #24622.

	* scripts/variables/automatic: Check prereq ordering when the
	target with the recipe has no prereqs.  Savannah bug #21198.

	* scripts/variables/LIBPATTERNS: Add a new set of test for
	$(.LIBPATTERNS) (previously untested!)

2009-06-04  Paul Smith  <psmith@gnu.org>

	* scripts/variables/SHELL: The export target-specific SHELL test
	has an incorrect known-good-value.

	* scripts/misc/general4: Check for whitespace (ffeed, vtab, etc.)

	* scripts/features/se_explicit: Add tests for Savannah bug #24588.
